# StaticCameraGazebo

./: README.md
Modelplugin/: CMakeLists.txt  camera_gt.cc  camera_move.cc  camera_move_stoch.cc  camera_move_stoch_adapt.cc  camera_move_test.cc
Models/Surroundingwalls1/: model.config  model.sdf
Models/Surroundingwalls2/: model.config  model.sdf
Models/Surroundingwalls4Colors/: model.config  model.sdf
Models/SurroundingwallsBlue/: model.config  model.sdf
Models/box/: model.config  model.sdf
Models/distorted_camera_k/: model.config  model.sdf
Models/distorted_camera_test/: model.config  model.sdf
Worldfiles/: camera_spawned.world  camera_testset.world  camera_turned.world
Worldplugin/: CMakeLists.txt  camera_world_spawningobjects.cc  camera_world_turningobjects.cc
flying_camera/: CMakeLists.txt  camera.world  camera_dump.cc  camera_gt.cc  camera_move.cc  camera_org.world
flying_camera_objectsspawn/: CMakeLists.txt  camera.world  camera_old.world  camera_world_objects.cc
gazebo_plugin_tutorial/: CMakeLists.txt  factory.cc  model_push.cc
listener/: CMakeLists.txt  listener.cc
